# rddl2puffer

./: .gitignore  PLAN.md  README.md  TASKS.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: cartpole_side_by_side.md  puffer_install.md  puffertank_workspace.md  rddl_plus_design.md  rddl_to_puffer_plan.md
docs/study/: README.md  cartpole_comparison.md  cartpole_generated_vs_native_audit.md  pong_minibatch_codepath_audit.md  pong_puffer_parity_progress.md  pong_puffer_parity_rddl_plan.md  pong_rddl_vs_native_audit.md  pyrddlgym_paper_notes.md  reference_code_map.md
examples/domains/: README.md
rddl2puffer/: __init__.py  cli.py  workspace.py
rddl2puffer/backends/: __init__.py
rddl2puffer/baselines/: __init__.py  wrapper.py
rddl2puffer/benchmarks/: __init__.py  cartpole.py  cartpole_rddl.py
rddl2puffer/frontend/: __init__.py  compile.py  ground.py  parse.py  schema.py
rddl2puffer/ir/: __init__.py  interpret.py  lower.py  nodes.py  validate.py
rddl2puffer/rddl_plus/: __init__.py
rddl2puffer/reporting/: __init__.py  cartpole_reward_report.py  cartpole_sweep_report.py  sweep_compare.py
rddl2puffer/testing/: __init__.py  compiled_reference.py  differential.py  pyrddlgym_reference.py  rollout_compare.py
scripts/: bootstrap_puffertank_workspace.sh
scripts/experiments/: common.py  (+5 more)
tests/: test_benchmarks.py  test_cartpole.py  test_cartpole_reward_report.py  test_cartpole_sweep_report.py  test_codegen.py  test_diff_rollouts.py  test_ir.py  test_pong_compile.py  test_rddl_plus_parser.py  test_schema.py  test_workspace.py
(+69 files in other folders)
