[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rddl2puffer"
version = "0.1.0"
description = "Compiler-oriented tooling for lowering grounded RDDL models into native Puffer environments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ply>=3.11",
]

[project.scripts]
rddl2puffer = "rddl2puffer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
include = ["rddl2puffer*"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
